--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -36,6 +36,15 @@ rules:
   - get
   - update
   - delete
+- apiGroups:
+  - experimental.kpack.pivotal.io
+  resources:
+  - custombuilders
+  - custombuilders/status
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
