--- a/src/cf-api-kpack-watcher/Dockerfile
+++ b/src/cf-api-kpack-watcher/Dockerfile
@@ -11,8 +11,11 @@ RUN go mod download
 
 # Copy the go source
 COPY main.go main.go
-COPY api/ api/
 COPY controllers/ controllers/
+COPY cf/ cf/
+COPY auth/ auth/
+COPY capi_model/ capi_model/
+COPY image_registry/ image_registry/
 
 # Build
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a -o manager main.go
