--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -36,6 +36,12 @@ rules:
   - get
   - update
   - delete
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: "cf:kpack-custombuilder-fetcher"
+rules:
 - apiGroups:
   - experimental.kpack.pivotal.io
   resources:
@@ -43,8 +49,6 @@ rules:
   - custombuilders/status
   verbs:
   - get
-  - list
-  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -72,6 +76,20 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: "cf:kpack-builds-admin"
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cf-api-server-service-account-kpack-custombuilder-fetcher
+  namespace: #@ data.values.staging_namespace
+subjects:
+- kind: ServiceAccount
+  name: cf-api-server-service-account
+  namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: "cf:kpack-custombuilder-fetcher"
   apiGroup: rbac.authorization.k8s.io
 
 #! worker service account
