Change kpack registry repository key
- Change from repository to repository_prefix

Signed-off-by: Eric Promislow <epromislow@suse.com>

--- a/values/_default.yml
+++ b/values/_default.yml
@@ -89,7 +89,7 @@ kpack:
   registry:
     hostname: ""
     password: ""
-    repository: ""
+    repository_prefix: ""
     username: ""
 metric_proxy:
   ca:
