--- a/src/cf-api-controllers/Makefile
+++ b/src/cf-api-controllers/Makefile
@@ -17,28 +17,24 @@ endif
 all: manager
 
 # Run tests
-test: generate fmt vet manifests /usr/local/kubebuilder/
-	go test ./... -coverprofile cover.out
+test: generate fmt vet /usr/local/kubebuilder/
+	go test -v ./... -coverprofile cover.out
 
 # Build manager binary
 manager: generate fmt vet
-	go build -o bin/manager main.go
+	go build -o bin/manager -v main.go
 
 # Run against the configured Kubernetes cluster in ~/.kube/config
-run: generate fmt vet manifests
+run: generate fmt vet
 	go run ./main.go
 
 # Install CRDs into a cluster
-install: manifests
+install:
 	kustomize build config/crd | kubectl apply -f -
 
 # Uninstall CRDs from a cluster
-uninstall: manifests
+uninstall:
 	kustomize build config/crd | kubectl delete -f -
-
-# Generate manifests e.g. CRD, RBAC etc.
-manifests: controller-gen
-	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=manager-role webhook paths="./..." output:crd:artifacts:config=config/crd/bases
 
 # Run go fmt against code
 fmt:
