--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -28,6 +28,11 @@ spec:
           args: ["exec", "rake", "deployment_updater:start"]
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: 300Mi
+            limits:
+              memory: 1Gi
           readinessProbe:
             tcpSocket:
               port: 4445
