--- a/dev-templates/_dev-values.yml
+++ b/dev-templates/_dev-values.yml
@@ -3,7 +3,7 @@
 kbld:
   destination:
     ccng: ""
-    capi_kpack_watcher: ""
+    cf_api_controllers: ""
 src_dirs:
   ccng: ""
-  capi_kpack_watcher: ""
+  cf_api_controllers: ""
