--- a/values/_default.yml
+++ b/values/_default.yml
@@ -111,7 +111,7 @@ uaa:
     secretName: null
 workloads_namespace: cf-workloads
 images:
-  capi_kpack_watcher:
+  cf_api_controllers:
   ccng:
   cf_autodetect_builder:
   nginx:
