--- a/values/_default.yml
+++ b/values/_default.yml
@@ -103,7 +103,7 @@ system_domain: cf-system.svc.cluster.local
 system_namespace: cf-system
 uaa:
   clients:
-    capi_kpack_watcher:
+    cf_api_controllers:
       secret: supers3cret
     cloud_controller_username_lookup:
       secret: supers3cret
