--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -40,7 +40,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: "cf:kpack-custombuilder-fetcher"
+  name: "cf:kpack-custombuilder-admin"
 rules:
 - apiGroups:
   - experimental.kpack.pivotal.io
@@ -49,6 +49,9 @@ rules:
   - custombuilders/status
   verbs:
   - get
+  - create
+  - update
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -89,7 +92,7 @@ subjects:
   namespace: #@ data.values.system_namespace
 roleRef:
   kind: ClusterRole
-  name: "cf:kpack-custombuilder-fetcher"
+  name: "cf:kpack-custombuilder-admin"
   apiGroup: rbac.authorization.k8s.io
 
 #! worker service account
