--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -131,6 +131,22 @@ roleRef:
   name: "cf:kpack-builds-admin"
   apiGroup: rbac.authorization.k8s.io
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cf-api-worker-service-account-kpack-custombuilder-admin
+  namespace: #@ data.values.staging_namespace
+subjects:
+- kind: ServiceAccount
+  name: cf-api-worker-service-account
+  namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: "cf:kpack-custombuilder-admin"
+  apiGroup: rbac.authorization.k8s.io
+
+#! controllers service account
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
