Set memory and cpu requests and limit values for all containers
[#174462927](https://www.pivotaltracker.com/story/show/174462927)

Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -33,8 +33,10 @@ spec:
             value: #@ ccng_secrets_mount_path
           resources:
             requests:
+              cpu: 100m
               memory: 300Mi
             limits:
+              cpu: 500m
               memory: 1Gi
           readinessProbe:
             tcpSocket:
